cmake_minimum_required(VERSION 3.7)
project(ProjectPUBSUBzmq)

set(CMAKE_CXX_STANDARD 11)

#add_library(linkedblockingqueue.h STATIC SUB3final.cpp)
if(NOT LINUX)
    message(STATUS ">>> APPLE")
    link_directories("/opt/homebrew/lib")
    include_directories("/opt/homebrew/include")
endif()
link_libraries("-lpthread")
link_libraries("-lczmq")
link_libraries("-lzmq")
link_libraries("-lm")
link_libraries("-ljson-c")
add_compile_options(-Wall)
add_executable(CLIENT_BEACON discovery_client.cpp discovery_server.cpp)
add_executable(PUB simplePUB.cpp)
add_executable(Item Utils/Item.cpp Utils/LockingQueue.cpp Utils/LockingQueue.hpp)
add_executable(SUB SUBfinal.cpp)
add_executable(SUB3 SUBfinal3.cpp)